# VaultPeer-Desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PLAN-Desktop.md  PRD-Desktop.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
WEBRTC-SERVERS/Server-node/src/: config.js  index.js  logger.js  signaling.js  storage.js  webrtc.js
WEBRTC-SERVERS/Signaling-server/: server.js
docs/: FAQ.md  KEYBOARD-SHORTCUTS.md  PRIVACY-POLICY.md  USER-GUIDE.md
scripts/: generate-icon-ico.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  autotype.rs  biometric.rs  browser.rs  clipboard.rs  commands.rs  crypto.rs  database.rs  dpapi.rs  error.rs  export.rs  fs_ops.rs  import.rs  lib.rs  main.rs  otp.rs  search.rs  security.rs  session.rs  settings.rs  sync.rs  tray.rs
src-tauri/tests/: keepass_compat.rs
src/components/: ClipboardIndicator.tsx  ConfirmDialog.tsx  CreateDatabaseDialog.tsx  EntryDetail.tsx  EntryEditor.tsx  EntryList.tsx  GroupTree.tsx  HistoryPanel.tsx  IconPicker.tsx  ImportExportPanel.tsx  MainLayout.tsx  OtpCard.tsx  OtpEditor.tsx  PasswordField.tsx  PasswordGenerator.tsx  PasswordGeneratorPopover.tsx  PromptDialog.tsx  QrScanner.tsx  SearchModal.tsx  SettingsPanel.tsx  StrengthMeter.tsx  SyncPanel.tsx  SyncStatus.tsx  TagInput.tsx  ThemeToggle.tsx  TitleBar.tsx  UnlockScreen.tsx  VaultView.tsx  WelcomeScreen.tsx  WindowControls.tsx
src/lib/: backup.ts  clipboard.ts  icons.tsx  otp.ts  passwordGenerator.test.ts  passwordGenerator.ts  passwordStrength.test.ts  passwordStrength.ts  qr.ts  shortcuts.test.ts  shortcuts.ts  tags.test.ts  tags.ts  templates.ts  webrtc.ts  wordlist.ts
src/services/: tauri.ts  window.ts
src/stores/: clipboardStore.ts  databaseStore.ts  generatorStore.ts  sessionStore.ts  settingsStore.ts  syncStore.ts  themeStore.ts  vaultStore.ts
src/styles/: globals.css
src/test/: setup.ts
tests-e2e/: wdio.conf.ts
tests-e2e/specs/: app.spec.ts
