[package]
name = "vaultpeer-desktop"
version = "0.1.0"
description = "VaultPeer — KeePass-compatible password manager"
authors = ["VaultPeer"]
edition = "2021"
rust-version = "1.79"

# The library is what Tauri's mobile/desktop entrypoints call into.
[lib]
name = "vaultpeer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# KDBX parsing/serialization (Phase 2). `save_kdbx4` enables writing databases.
keepass = { version = "0.13", features = ["save_kdbx4"] }
# Re-exported by keepass for Argon2 KDF parameters (KdfConfig::Argon2*.version).
# The crate is published as `rust-argon2` but exposes the `argon2` module path.
argon2 = { package = "rust-argon2", version = "3" }

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
